Fix: Align buttons and label in ToggleButtonGroup (#19036)

--- a/public/sass/pages/_explore.scss
+++ b/public/sass/pages/_explore.scss
@@ -349,10 +349,6 @@
 .query-type-toggle {
   margin-left: 5px;
 
-  .toggle-button-group {
-    padding-top: 2px;
-  }
-
   .btn.active {
     background-color: $input-bg;
     background-image: none;
